...

    <string name="zpw_warning_vietcombank_linkbankaccount_not_linkcard">Ngân hàng Vietcombank chỉ hỗ trợ Liên kết tài khoản</string>

    <string name="zpw_warning_link_bankaccount_existed">Tài khoản của bạn đã liên kết với ngân hàng đã chọn</string>
    <string name="zpw_warning_unlink_bankaccount_invalid">Tài khoản của bạn chưa liên kết với ngân hàng</string>

    <string name="zpw_channelname_vietcombank_mapaccount">Tài khoản Vietcombank</string>

    <string name="header_title">Chọn số tài khoản</string>
    <string name="footer_button_close">HỦY</string>
    <string name="footer_button_confirm">ĐỒNG Ý</string>

    <string name="zpw_cache_card_for_show_inlinkcard">cache_card_for_show_in_linkcard</string>
...
